fixes user menu collapsing into burger menu when it's opened

--- a/resources/webcourses/src/app/views/default/header-bar/header-bar.component.scss
+++ b/resources/webcourses/src/app/views/default/header-bar/header-bar.component.scss
@@ -42,3 +42,9 @@
     display: inline-block!important;
   }
 }
+
+@media(min-width: 992px) {
+  .alwaysVisible {
+    order: 1;
+  }
+}
